--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./assets/lib/layui/css/layui.css">
-    <link rel="stylesheet" href="./login.css">
+    <link rel="stylesheet" href="/assets/css/login.css">
    
 </head>
 
@@ -73,10 +73,12 @@
     </div>
     <!-- 导入jquery -->
     <script src="./assets/lib/jquery.js"></script>
+    <!-- 导入拼接后的url -->
+    <script src="/assets/js/xmlAps.js"></script>
    <!-- 导入layui -->
     <script src="./assets/lib/layui/layui.all.js"></script>
     <!-- 导入自己的js -->
-    <script src="./login.js"></script>
+    <script src="/assets/js/login.js"></script>
 </body>
 
 </html>
