--- a/login.html
+++ b/login.html
@@ -12,16 +12,16 @@
 </head>
 
 <body>
-    <img src="./assets/images/logo.png" alt="" id="img">
+    <img src="/assets/images/logo.png" alt="" id="img">
     <!-- 登录 -->
     <div class="form">
         <div class="logo">
-            <img src="./assets/images/login_title.png" alt="">
+            <img src="/assets/images/login_title.png" alt="">
         </div>
         <form class="layui-form" action="" id="denglu">
             <div class="layui-form-item user">
                 <i class="layui-icon layui-icon-username z"></i>
-                <input type="text" name="title" required lay-verify="required" placeholder="请输入用户名" autocomplete="off"
+                <input type="text" name="username" required lay-verify="required" placeholder="请输入用户名" autocomplete="off"
                     class="layui-input" id="ipt">
 
             </div>
@@ -41,12 +41,12 @@
     <div class="reg-box">
        
         <div class="logo">
-            <img src="./assets/images/login_title.png" alt="">
+            <img src="/assets/images/login_title.png" alt="">
         </div>
         <form class="layui-form" action="" id="zhuche">
             <div class="layui-form-item user">
                 <i class="layui-icon layui-icon-username z"></i>
-                <input type="text" name="title" required lay-verify="required" placeholder="请输入用户名" autocomplete="off"
+                <input type="text" name="username" required lay-verify="required" placeholder="请输入用户名" autocomplete="off"
                     class="layui-input" id="ipt">
 
             </div>
@@ -72,11 +72,11 @@
         </form>
     </div>
     <!-- 导入jquery -->
-    <script src="./assets/lib/jquery.js"></script>
+    <script src="/assets/lib/jquery.js"></script>
     <!-- 导入拼接后的url -->
     <script src="/assets/js/xmlAps.js"></script>
    <!-- 导入layui -->
-    <script src="./assets/lib/layui/layui.all.js"></script>
+    <script src="/assets/lib/layui/layui.all.js"></script>
     <!-- 导入自己的js -->
     <script src="/assets/js/login.js"></script>
 </body>
