--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                         个人中心
                     </a>
                     <dl class="layui-nav-child">
-                        <dd><a href="">基本资料</a></dd>
-                        <dd><a href="">更换头像</a></dd>
-                        <dd><a href="">重置密码</a></dd>
+                        <dd><a href="/uers.html/基本资料.html" target="fm">基本资料</a></dd>
+                        <dd><a href="/uers.html/更换头像.html" target="fm">更换头像</a></dd>
+                        <dd><a href="/uers.html/重置密码.html" target="fm">重置密码</a></dd>
                     </dl>
                 </li>
                 
