--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
                         
                         <a href="javascript:;"><span class="iconfont icon-16"></span>文章管理</a>
                         <dl class="layui-nav-child">
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i> 文章类别</a></dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>文章列表</a></dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>发表文章</a></dd>
+                            <dd><a href="/文章/文章类别.html" target="fm"><i class="layui-icon layui-icon-app"></i> 文章类别</a></dd>
+                            <dd id="lnc"><a href="/文章/文章列表.html" target="fm" ><i class="layui-icon layui-icon-app"></i>文章列表</a></dd>
+                            <dd id="lnc-o"><a href="/文章/发表文章.html" target="fm" ><i class="layui-icon layui-icon-app"></i>发表文章</a></dd>
 
                         </dl>
                     </li>
