--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                         个人中心
                     </a>
                     <dl class="layui-nav-child">
-                        <dd><a href="">基本资料</a></dd>
-                        <dd><a href="">更换头像</a></dd>
-                        <dd><a href="">重置密码</a></dd>
+                        <dd><a href="/uers.html/基本资料.html" target="fm">基本资料</a></dd>
+                        <dd><a href="/uers.html/更换头像.html" target="fm">更换头像</a></dd>
+                        <dd><a href="/uers.html/重置密码.html" target="fm">重置密码</a></dd>
                     </dl>
                 </li>
                 
@@ -57,9 +57,9 @@
                         
                         <a href="javascript:;"><span class="iconfont icon-16"></span>文章管理</a>
                         <dl class="layui-nav-child">
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i> 文章类别</a></dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>文章列表</a></dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>发表文章</a></dd>
+                            <dd><a href="/文章/文章类别.html" target="fm"><i class="layui-icon layui-icon-app"></i> 文章类别</a></dd>
+                            <dd id="lnc"><a href="/文章/文章列表.html" target="fm" ><i class="layui-icon layui-icon-app"></i>文章列表</a></dd>
+                            <dd id="lnc-o"><a href="/文章/发表文章.html" target="fm" ><i class="layui-icon layui-icon-app"></i>发表文章</a></dd>
 
                         </dl>
                     </li>
