--- a/文章/编辑.html
+++ b/文章/编辑.html
@@ -93,7 +93,7 @@
         <script src="/assets/lib/cropper/jquery-cropper.js"></script>
         <script src="/assets/lib/tinymce/tinymce.min.js"></script>
         <script src="/assets/lib/tinymce/tinymce_setup.js"></script>
-        <script src="/assets/js/biaoji.js"></script>
+        <script src="/assets/js/bianji.js"></script>
 </body>
 
 </html>
